--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +7,9 @@
         <title>Kidz School</title>
         <link href="https://fonts.googleapis.com/css2?family
         =Noto+Sans+Mono&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="CSS/*">
+        <link rel="stylesheet" href="CSS/base.css">
     </head>
+    <body>
+        
+    </body>
 </html>
