--- a/index.html
+++ b/index.html
@@ -8,8 +8,25 @@
         <link href="https://fonts.googleapis.com/css2?family
         =Noto+Sans+Mono&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="CSS/base.css">
+        <link rel="stylesheet" href="CSS/flex.css">
+        <link rel="stylesheet" href="CSS/layout.css">
+        <link rel="stylesheet" href="CSS/crayon.css">
+        <link rel="stylesheet" href="CSS/mediaqueries.css">
     </head>
     <body>
-        
+        <header>
+            <div class="d-flex">
+                <div class="flex-grow bg-success bar-height"></div>
+                <div class="flex-grow bg-warning bar-height"></div>
+                <div class="flex-grow bg-danger bar-height"></div>
+                <div class="flex-grow bg-info bar-height"></div>
+                <div class="flex-grow bg-cozy bar-height"></div>
+                <div class="flex-grow bg-success bar-height"></div>
+                <div class="flex-grow bg-warning bar-height"></div>
+                <div class="flex-grow bg-danger bar-height"></div>
+                <div class="flex-grow bg-info bar-height"></div>
+                <div class="flex-grow bg-cozy bar-height"></div>
+            </div>
+        </header>
     </body>
 </html>
