--- a/index.html
+++ b/index.html
@@ -15,17 +15,38 @@
     </head>
     <body>
         <header>
-            <div class="d-flex">
-                <div class="flex-grow bg-success bar-height"></div>
-                <div class="flex-grow bg-warning bar-height"></div>
-                <div class="flex-grow bg-danger bar-height"></div>
-                <div class="flex-grow bg-info bar-height"></div>
-                <div class="flex-grow bg-cozy bar-height"></div>
-                <div class="flex-grow bg-success bar-height"></div>
-                <div class="flex-grow bg-warning bar-height"></div>
-                <div class="flex-grow bg-danger bar-height"></div>
-                <div class="flex-grow bg-info bar-height"></div>
-                <div class="flex-grow bg-cozy bar-height"></div>
+            <div class="flex-col">
+                <div class="d-flex">
+                    <div class="flex-grow bg-success bar-height"></div>
+                    <div class="flex-grow bg-warning bar-height"></div>
+                    <div class="flex-grow bg-danger bar-height"></div>
+                    <div class="flex-grow bg-info bar-height"></div>
+                    <div class="flex-grow bg-cozy bar-height"></div>
+                    <div class="flex-grow bg-success bar-height"></div>
+                    <div class="flex-grow bg-warning bar-height"></div>
+                    <div class="flex-grow bg-danger bar-height"></div>
+                    <div class="flex-grow bg-info bar-height"></div>
+                    <div class="flex-grow bg-cozy bar-height"></div>
+                </div>
+                //Taskbar
+                <nav class="d-flex justify-content-between">
+                    <img src="images/Bilder från min  iPhone 2621.PNG" alt="Stilig gosse iklädd sin favoritmask mask" height="15px" width="15px">
+                    <div class="nb-element1"></div>
+                    <div class="nb-element2"></div>
+                </nav>
+                /*LOWERBAR*/
+                <div class="d-flex">
+                    <div class="flex-grow bg-success bar-height"></div>
+                    <div class="flex-grow bg-warning bar-height"></div>
+                    <div class="flex-grow bg-danger bar-height"></div>
+                    <div class="flex-grow bg-info bar-height"></div>
+                    <div class="flex-grow bg-cozy bar-height"></div>
+                    <div class="flex-grow bg-success bar-height"></div>
+                    <div class="flex-grow bg-warning bar-height"></div>
+                    <div class="flex-grow bg-danger bar-height"></div>
+                    <div class="flex-grow bg-info bar-height"></div>
+                    <div class="flex-grow bg-cozy bar-height"></div>
+                </div>
             </div>
         </header>
     </body>
