EXTRA G: index.html

--- a/index.html
+++ b/index.html
@@ -2,52 +2,51 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA Compatible" content="IE=edge">
-        <title>Kidz School</title>
-        <link href="https://fonts.googleapis.com/css2?family
-        =Noto+Sans+Mono&display=swap" rel="stylesheet">
+        <meta name="viewport" content="width=screen-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Complements" content="">
+        <script src="https://kit.fontawesome.com/a3b74bf1b5.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="CSS/base.css">
-        <link rel="stylesheet" href="CSS/flex.css">
-        <link rel="stylesheet" href="CSS/layout.css">
-        <link rel="stylesheet" href="CSS/crayon.css">
-        <link rel="stylesheet" href="CSS/mediaqueries.css">
     </head>
     <body>
-        <header>
-            <div class="flex-col">
-                <div class="d-flex">
-                    <div class="flex-grow bg-success bar-height"></div>
-                    <div class="flex-grow bg-warning bar-height"></div>
-                    <div class="flex-grow bg-danger bar-height"></div>
-                    <div class="flex-grow bg-info bar-height"></div>
-                    <div class="flex-grow bg-cozy bar-height"></div>
-                    <div class="flex-grow bg-success bar-height"></div>
-                    <div class="flex-grow bg-warning bar-height"></div>
-                    <div class="flex-grow bg-danger bar-height"></div>
-                    <div class="flex-grow bg-info bar-height"></div>
-                    <div class="flex-grow bg-cozy bar-height"></div>
-                </div>
-                //Taskbar
-                <nav class="d-flex justify-content-between">
-                    <img src="images/Bilder från min  iPhone 2621.PNG" alt="Stilig gosse iklädd sin favoritmask mask" height="15px" width="15px">
-                    <div class="nb-element1"></div>
-                    <div class="nb-element2"></div>
-                </nav>
-                /*LOWERBAR*/
-                <div class="d-flex">
-                    <div class="flex-grow bg-success bar-height"></div>
-                    <div class="flex-grow bg-warning bar-height"></div>
-                    <div class="flex-grow bg-danger bar-height"></div>
-                    <div class="flex-grow bg-info bar-height"></div>
-                    <div class="flex-grow bg-cozy bar-height"></div>
-                    <div class="flex-grow bg-success bar-height"></div>
-                    <div class="flex-grow bg-warning bar-height"></div>
-                    <div class="flex-grow bg-danger bar-height"></div>
-                    <div class="flex-grow bg-info bar-height"></div>
-                    <div class="flex-grow bg-cozy bar-height"></div>
+        <!-- HEADER -->
+        <section>
+            <div>
+                <div><div>1</div><div>2</div><div>3</div></div>
+                <div>text and background</div>
+            </div>
+        </section>
+        <!-- GUIDES -->
+        <section>
+            <div><div>span på text</div><div><div>flex-c bild&text div</div></div></div>
+        </section>
+        <!-- DESTINATIONS -->
+        <section>
+            <div>
+                <div>flex-c<div>innehåller 2 steckdivs och en text<div></div><div></div><div></div></div><div>textunder</div></div>
+                <div> gallericontainer
+                    <div>annonskontainer<div>bild<div>cirkel abspos</div><div>rev abspos</div></div><div>text</div><div>knapp/annat/läggtill</div></div>
                 </div>
             </div>
-        </header>
+        </section>
+        <!-- STATISTICS -->
+        <section>
+            <div>
+                <div>flex-c<div>ikon</div><div>text</div></div>
+            </div>
+        </section>
+        <!-- LOCATIONS GALLERY -->
+        <section>
+            <div>
+                <div>kopiera rubrik ovan</div>
+                <div>knappar</div>
+                <div>galleri<div>bildx1</div></div>
+            </div>
+        </section>
+        <!-- FOOTER -->
+        <section>
+            <footer>
+                <div>flex-c, 1/4<div>img/text</div><div>text/img</div></div>
+            </footer>
+        </section>
     </body>
 </html>
