--- a/index.html
+++ b/index.html
@@ -6,15 +6,28 @@
         <meta http-equiv="X-UA-Complements" content="">
         <script src="https://kit.fontawesome.com/a3b74bf1b5.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="CSS/base.css">
+        <link rel="stylesheet" href="CSS/flex.css">
+        <link rel="stylesheet" href="CSS/layout.css">
     </head>
     <body>
         <!-- HEADER -->
-        <section>
-            <div>
-                <div><div>1</div><div>2</div><div>3</div></div>
+
+        <section class="section-img">
+            
+            <div class="bg-primary section-div">
+                <div class="d-flex f-jc-space-between m-6 mt-4">
+                    <div class="logo-container">
+                        <img src="images/logga.png" class="format-logo" alt="Free Diver Club">
+                    </div>
+                    <div>2</div>
+                    <div>3</div></div>
                 <div>text and background</div>
             </div>
         </section>
+        <br>
+        <br>
+        <br>
+        <br>
         <!-- GUIDES -->
         <section>
             <div><div>span på text</div><div><div>flex-c bild&text div</div></div></div>
@@ -22,7 +35,7 @@
         <!-- DESTINATIONS -->
         <section>
             <div>
-                <div>flex-c<div>innehåller 2 steckdivs och en text<div></div><div></div><div></div></div><div>textunder</div></div>
+                <div class="">flex-c<div>innehåller 2 steckdivs och en text<div></div><div></div><div></div></div><div>textunder</div></div>
                 <div> gallericontainer
                     <div>annonskontainer<div>bild<div>cirkel abspos</div><div>rev abspos</div></div><div>text</div><div>knapp/annat/läggtill</div></div>
                 </div>
