--- a/index.html
+++ b/index.html
@@ -1,65 +1,35 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=screen-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Complements" content="">
-        <script src="https://kit.fontawesome.com/a3b74bf1b5.js" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="CSS/base.css">
-        <link rel="stylesheet" href="CSS/flex.css">
-        <link rel="stylesheet" href="CSS/layout.css">
-    </head>
-    <body>
-        <!-- HEADER -->
-
-        <section class="section-img">
-            
-            <div class="bg-primary section-div">
-                <div class="d-flex f-jc-space-between m-6 mt-4">
-                    <div class="logo-container">
-                        <img src="images/logga.png" class="format-logo" alt="Free Diver Club">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Diving Page</title>
+</head>
+<body>
+    <!--Front Page-->
+    <section class="overflow-hidden position-relative bg-slideshow">
+        <div class="position-absolut">
+            <header>
+                <div class="d-flex f-space-between">
+                    <div class="logo"> <img src="images/logga.png" alt="diving logo"> </div>
+                    <div class="navigation-buttons">
+                        <div><a href="#home">Home</a></div>
+                        <div><a href="#tours">Tours</a></div>
+                        <div><a href="#hotels">Hotels</a></div>
+                        <div><a href="#liveabroads">Liveabroads</a></div>
                     </div>
-                    <div>2</div>
-                    <div>3</div></div>
-                <div>text and background</div>
-            </div>
-        </section>
-        <br>
-        <br>
-        <br>
-        <br>
-        <!-- GUIDES -->
-        <section>
-            <div><div>span på text</div><div><div>flex-c bild&text div</div></div></div>
-        </section>
-        <!-- DESTINATIONS -->
-        <section>
-            <div>
-                <div class="">flex-c<div>innehåller 2 steckdivs och en text<div></div><div></div><div></div></div><div>textunder</div></div>
-                <div> gallericontainer
-                    <div>annonskontainer<div>bild<div>cirkel abspos</div><div>rev abspos</div></div><div>text</div><div>knapp/annat/läggtill</div></div>
+                    <div>ICON!
+                        <i></i>
+                    </div>
                 </div>
+            </header>
+            <div class="d-flexc position-absolute centerXY">
+                <div>Meet the Turtles</div>
+                <div>Lorem</div>
             </div>
-        </section>
-        <!-- STATISTICS -->
-        <section>
-            <div>
-                <div>flex-c<div>ikon</div><div>text</div></div>
-            </div>
-        </section>
-        <!-- LOCATIONS GALLERY -->
-        <section>
-            <div>
-                <div>kopiera rubrik ovan</div>
-                <div>knappar</div>
-                <div>galleri<div>bildx1</div></div>
-            </div>
-        </section>
-        <!-- FOOTER -->
-        <section>
-            <footer>
-                <div>flex-c, 1/4<div>img/text</div><div>text/img</div></div>
-            </footer>
-        </section>
-    </body>
+        </div>
+    </section>
+</body>
 </html>
