changes to header

--- a/index.html
+++ b/index.html
@@ -6,19 +6,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Diving Page</title>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Kanit:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="CSS/base.css">
+    <link rel="stylesheet" href="CSS/start.css">
 </head>
 <body>
     <!--Front Page-->
-    <section class="overflow-hidden position-relative bg-slideshow">
-        <div class="position-absolut">
-            <header>
-                <div class="d-flex f-space-between">
-                    <div class="logo"> <img src="images/logga.png" alt="diving logo"> </div>
-                    <div class="navigation-buttons">
-                        <div><a href="#home">Home</a></div>
-                        <div><a href="#tours">Tours</a></div>
-                        <div><a href="#hotels">Hotels</a></div>
-                        <div><a href="#liveabroads">Liveabroads</a></div>
+    <section class="overflow-hidden position-absolute bg-slideshow">
+        <div>
+            <header class="pt-2">
+                <div class="d-flex f-space-between centerY Ucase lr-padd bc">
+                    <div class="text-color-white Kanit">Dive<span class="text-color-orange">Tours</span></div>
+                    <div class="d-flex" id="nav-buttons">
+                        <div><a href="#home" class="nav-button">Home</a></div>
+                        <div><a href="#tours" class="nav-button">Tours</a></div>
+                        <div><a href="#hotels" class="nav-button">Hotels</a></div>
+                        <div><a href="#liveabroads" class="nav-button">Liveabroads</a></div>
                     </div>
                     <div>ICON!
                         <i></i>
