nav-section inprogress

--- a/index.html
+++ b/index.html
@@ -1,38 +1,33 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Diving Page</title>
+    <title>Document</title>
     <script src="https://kit.fontawesome.com/a3b74bf1b5.js" crossorigin="anonymous"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Kanit:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="CSS/base.css">
-    <link rel="stylesheet" href="CSS/start.css">
+    <link rel="stylesheet" href="CSS/layout.css">
+    <link rel="stylesheet" href="CSS/module.css">
 </head>
 <body>
-    <!--Front Page-->
-    <section class="overflow-hidden bg-slideshow position-relative">
-        <div>
-            <header>
-                <div class="d-flex f-space-between centerY Ucase p">
-                    <div class="text-color-white Kanit">Dive<span class="text-color-orange">Tours</span></div>
-                    <div class="d-flex" id="nav-buttons">
-                        <div><a href="#home" class="nav-button">Home</a></div>
-                        <div><a href="#tours" class="nav-button">Tours</a></div>
-                        <div><a href="#hotels" class="nav-button">Hotels</a></div>
-                        <div><a href="#liveabroads" class="nav-button">Liveabroads</a></div>
-                    </div>
-                    <div>
-                        <i class="fas fa-dolly centerXY fa-circle "></i>
-                    </div>
-                </div>
-            </header>
-            <div class="d-flexc position-absolute centerXY centerY">
-                <div>Meet the Turtles</div>
-                <div">Lorem</div>
+    <section class="slideshow">
+        <nav class="navigation">
+            <div class="logo">dive<span>tours</span></div>
+            <div class="nav-sections">
+                <div>home</div>
+                <div>tours</div>
+                <div>hotels</div>
+                <div>liveabroads</div>
             </div>
+            <div class="icon-div">
+                <i>fontawesome</i>
+            </div>
+        </nav>
+
+        <div class="welcome-tag">
+            <div>meet the turtles</div>
+            <p>Lorem ipsum dolor sit amet</p>
         </div>
     </section>
 </body>
