--- a/index.html
+++ b/index.html
@@ -6,19 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="https://kit.fontawesome.com/a3b74bf1b5.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Kanit:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="CSS/base.css">
     <link rel="stylesheet" href="CSS/layout.css">
     <link rel="stylesheet" href="CSS/module.css">
+    <link rel="stylesheet" href="CSS/shame.css">
+    <link rel="stylesheet" href="CSS/state.css">
 </head>
 <body>
-    <section class="slideshow">
+    <section class="homepage">
+        <div class="slideshow__imageContainter">
+            <img src="/images/proffeee.png" alt="" class="slideshow__image">
+            <img src="/images/proffeee.png" alt="" class="slideshow__image">
+            <img src="/images/proffeee.png" alt="" class="slideshow__image">
+            <img src="/images/proffeee.png" alt="" class="slideshow__image">
+        </div>
         <nav class="navigation">
             <div class="logo">dive<span>tours</span></div>
             <div class="nav-sections">
-                <div>home</div>
-                <div>tours</div>
-                <div>hotels</div>
-                <div>liveabroads</div>
+                <div><div class="nav-button">home<div></div></div></div>
+                <div><div class="nav-button">tours<div></div></div></div>
+                <div><div class="nav-button">hotels<div></div></div></div>
+                <div><div class="nav-button">liveabroads<div></div></div></div>
             </div>
             <div class="icon-div">
                 <i>fontawesome</i>
@@ -26,7 +37,7 @@
         </nav>
 
         <div class="welcome-tag">
-            <div>meet the turtles</div>
+            <div>meet the <span>turtles</span></div>
             <p>Lorem ipsum dolor sit amet</p>
         </div>
     </section>
