--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
                 <div><div class="nav-button">liveabroads<div></div></div></div>
             </div>
             <div class="icon-div">
-                <i>fontawesome</i>
+                <i class="fas fa-cart-plus"></i>
+                <div class="emblem">1</div>
             </div>
         </nav>
 
