everything done but the nav-section-mediaq

--- a/index.html
+++ b/index.html
@@ -63,29 +63,31 @@
                 <h2>Meet</h2>
                 <h1>Our <span>Guides</span></h1>
             </div>
-            <div class="guide-div">
-                <div>
-                    <img src="images/bild2621.PNG" alt="" class="guide-circle">
+            <div class="guide-flex-r"> 
+                <div class="guide-div">
+                    <div>
+                        <img src="images/bild2621.PNG" alt="" class="guide-circle">
+                    </div>
+                    <h6>mrX</h6>
                 </div>
-                <h6>mrX</h6>
-            </div>
-            <div class="guide-div">
-                <div>
-                    <img src="images/bild2621.PNG" alt="" class="guide-circle">
+                <div class="guide-div">
+                    <div>
+                        <img src="images/bild2621.PNG" alt="" class="guide-circle">
+                    </div>
+                    <h6>mrX</h6>
                 </div>
-                <h6>mrX</h6>
-            </div>
-            <div class="guide-div">
-                <div>
-                    <img src="images/bild2621.PNG" alt="" class="guide-circle">
+                <div class="guide-div">
+                    <div>
+                        <img src="images/bild2621.PNG" alt="" class="guide-circle">
+                    </div>
+                    <h6>mrX</h6>
                 </div>
-                <h6>mrX</h6>
-            </div>
-            <div class="guide-div">
-                <div>
-                    <img src="images/bild2621.PNG" alt="" class="guide-circle">
+                <div class="guide-div">
+                    <div>
+                        <img src="images/bild2621.PNG" alt="" class="guide-circle">
+                    </div>
+                    <h6>mrX</h6>
                 </div>
-                <h6>mrX</h6>
             </div>
         </div>
     </section>
@@ -113,7 +115,7 @@
                     </div>
                 </div>
                 <div class="card-info">
-                    <h1>dajving</h1>
+                    <h1>diving</h1>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dit.</p>
                     <div class="price-tag"><h2>Price</h2><h3>$123</h3></div>
                     <button class="buy-button">buy now</button>
@@ -130,7 +132,7 @@
                     </div>
                 </div>
                 <div class="card-info">
-                    <h1>dajving</h1>
+                    <h1>diving</h1>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dit.</p>
                     <div class="price-tag"><h2>Price</h2><h3>$123</h3></div>
                     <button class="buy-button">buy now</button>
@@ -147,7 +149,7 @@
                     </div>
                 </div>
                 <div class="card-info">
-                    <h1>dajving</h1>
+                    <h1>diving</h1>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dit.</p>
                     <div class="price-tag"><h2>Price</h2><h3>$123</h3></div>
                     <button class="buy-button">buy now</button>
@@ -164,7 +166,7 @@
                     </div>
                 </div>
                 <div class="card-info">
-                    <h1>dajving</h1>
+                    <h1>diving</h1>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dit.</p>
                     <div class="price-tag"><h2>Price</h2><h3>$123</h3></div>
                     <button class="buy-button">buy now</button>
@@ -181,7 +183,7 @@
                     </div>
                 </div>
                 <div class="card-info">
-                    <h1>dajving</h1>
+                    <h1>diving</h1>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dit.</p>
                     <div class="price-tag"><h2>Price</h2><h3>$123</h3></div>
                     <button class="buy-button">buy now</button>
@@ -237,7 +239,6 @@
             </div>
         </div>
     </section>
-
     <section class="dest-section">
         <div class='our-locations-div2'>
             <div class="flex-r2">
@@ -260,34 +261,66 @@
         <div class="dest-gallery">
             <div class="dest-img-container">
                 <img src="/images/fiske_guiden.jpg" alt="" class="dest-img">
-                <div class="dest-info">kanade</div>
+                <div class="dest-info">kanada</div>
             </div>
 
             <div class="dest-img-container">
                 <img src="/images/fiske_guiden.jpg" alt="" class="dest-img">
-                <div class="dest-info">kanade</div>
+                <div class="dest-info">sverige</div>
             </div>
             <div class="dest-img-container">
                 <img src="/images/fiske_guiden.jpg" alt="" class="dest-img">
-                <div class="dest-info">kanade</div>
+                <div class="dest-info">danmark</div>
             </div>
             <div class="dest-img-container">
                 <img src="/images/fiske_guiden.jpg" alt="" class="dest-img">
-                <div class="dest-info">kanade</div>
+                <div class="dest-info">finland</div>
             </div>
             <div class="dest-img-container">
                 <img src="/images/fiske_guiden.jpg" alt="" class="dest-img">
-                <div class="dest-info">kanade</div>
+                <div class="dest-info">kurrikurriduttön</div>
             </div>
             <div class="dest-img-container">
                 <img src="/images/fiske_guiden.jpg" alt="" class="dest-img">
-                <div class="dest-info">kanade</div>
+                <div class="dest-info">annat</div>
             </div>
         </div>
     </section>
 
     <footer>
-        <div><a style="color:white">footer</a></div>
+
+        <div class="footer-div">
+            <h1 class="logo">dive<span>tours</span></h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo sequi magnam doloremque ex eius ipsum eum</p>
+        </div>
+        <div class="footer-div">
+            <h2>contact us</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae amet quaerat</p>
+            <div class="footer-icon"><i class="fas fa-home"></i>12 Some Street, CA</div>
+            <div class="footer-icon"><i class="fas fa-home"></i>[00] 123 456 789</div>
+            <div class="footer-icon"><i class="fas fa-home"></i>info@my-side.com</div>
+        </div>
+        <div class="footer-div">
+            <h2>gallery</h2>
+            <div class="footer-gallery">
+                <img src="/images/Bilder från min  iPhone 756.PNG" alt="" class="footer-img">
+                <img src="/images/Bilder från min  iPhone 756.PNG" alt="" class="footer-img">
+                <img src="/images/Bilder från min  iPhone 756.PNG" alt="" class="footer-img">
+                <img src="/images/Bilder från min  iPhone 756.PNG" alt="" class="footer-img">
+                <img src="/images/Bilder från min  iPhone 756.PNG" alt="" class="footer-img">
+                <img src="/images/Bilder från min  iPhone 756.PNG" alt="" class="footer-img">
+            </div>
+        </div>
+        <div class="footer-div">
+            <h2>social media</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <div class="footer-button-tray">
+                <a href=""><i class="fas fa-home"></i></a>
+                <a href=""><i class="fas fa-home"></i></a>
+                <a href=""><i class="fas fa-home"></i></a>
+                <a href=""><i class="fas fa-home"></i></a>
+            </div>
+        </div>
 
     </footer>
 
