--- a/index.html
+++ b/index.html
@@ -29,22 +29,10 @@
         <nav class="navigation">
             <div class="logo">dive<span>tours</span></div>
             <div class="nav-sections">
-                <div>
-                    <div class="nav-button">home<div></div>
-                    </div>
-                </div>
-                <div>
-                    <div class="nav-button">tours<div></div>
-                    </div>
-                </div>
-                <div>
-                    <div class="nav-button">hotels<div></div>
-                    </div>
-                </div>
-                <div>
-                    <div class="nav-button">liveabroads<div></div>
-                    </div>
-                </div>
+                <div class="">home</div>
+                <div class="nav-button">tours</div>
+                <div class="nav-button">hotels</div>
+                <div class="nav-button">liveabroads</div>
             </div>
             <div class="icon-div">
                 <i class="fas fa-cart-plus"></i>
